--- a/css/styles.css
+++ b/css/styles.css
@@ -211,8 +211,9 @@ opacity: 0.7;
 }
 
 #services-logo{
-	color: #6797e0;
-	font-size: 30px;}
+	color: #064E97;
+	font-size: 50px;
+opacity:.9;}
 
 
 /* ------------- Portfolio section ------------*/
