--- a/css/styles.css
+++ b/css/styles.css
@@ -56,10 +56,9 @@ a{
 	background: #f5f5f5;
 	text-decoration: none;
 	font-family: didot,serif;
-	font-size: 20px;
+	font-size: 15px;
 	padding: 8px;
 	font-weight: bold;
-	letter-spacing: 1px;
 	transition: all .5s;
 	color: #0C2943;
 
@@ -73,14 +72,14 @@ a{
 .hero{
 	height: 100vh;
 	width: 100%;
-	background-color: rgba(0,0,0,0.6);
+	background-color: rgba(0,0,0,0.5);
 }
 
 .bgImage{
 	position: absolute;
 	width: 100%;
 	height: 100vh;
-	background: url(../aol.jpg) center;
+	background: url(../bg.jpg) center;
 	background-size: cover;
 	top: 0;
 	left: 0;
@@ -108,14 +107,20 @@ nav .logo{
 	float: left;
 	text-decoration: none;
 	color: white;
-	font-size: 1.5rem;
-	font-weight: 600;
+	font-size: 1.1rem;
+	font-weight: 500;
 }
 
 nav a {
 	color: #f5f5f5;
 	text-decoration: none;
 	padding-left: 40px;
+	transition: all .5s;
+}
+
+nav a:hover{
+	color: #72bbff;
+
 }
 
 .mobileNav{
@@ -130,7 +135,8 @@ nav a {
 
 
 .heroContent{
-	margin:30vh 0 0 15%;
+	margin:30vh 0 0 17%;
+	z-index: ;
 }
 
 .heroContent p{
@@ -141,8 +147,9 @@ nav a {
 
 .heroContent h1{
 	color: white;
-  text-shadow: 0px 0px 10px royalblue;
+  text-shadow: 0px 0px 10px black;
   margin-bottom: 20px;
+	font-size: 3.5rem;
 }
 
 .scroll{
@@ -157,6 +164,12 @@ nav a {
 .scroll p{
 	color: white;
 	font-size: 16px;
+		transition: all .5s;
+}
+
+.scroll p:hover{
+	font-size:18px;
+
 }
 
 .scroll .line{
